--- a/config.env
+++ b/config.env
@@ -1,2 +1,5 @@
 NODE_ENV=development
 PORT=3000
+DATABASE=mongodb+srv://root:<PASSWORD>@cluster0-dukvb.mongodb.net/membership?retryWrites=true&w=majority
+DB_PASS=root1234
+
