--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,9 @@
   },
   "engines": {
     "node": "12.14.1"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1",
+    "node-mocks-http": "^1.8.1"
   }
 }
