--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "start:dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
