--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
+    "start": "node dist/server.js",
+    "start:dev": "nodemon dist/server.js",
+    "start:prod": "NODE_ENV=production nodemon dist/server.js",
     "test": "jest --watchAll",
-    "debug": "ndb server.js"
+    "debug": "ndb dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,8 @@
     "node": "12.14.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.11",
     "jest": "^26.0.1",
     "node-mocks-http": "^1.8.1",
     "supertest": "^4.0.2"
