--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "start:dev": "nodemon dist/server.js",
-    "start:prod": "NODE_ENV=production nodemon dist/server.js",
+    "start": "ts-node src/server.ts",
+    "start:dev": "nodemon -x ts-node src/server.ts",
     "test": "jest --watchAll",
     "debug": "ndb dist/server.js"
   },
