--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "start:dev": "nodemon -x ts-node src/server.ts",
+    "start": "ts-node src/config/server.ts",
+    "start:dev": "nodemon -x ts-node src/config/server.ts",
     "test": "jest --watchAll",
     "debug": "ndb dist/server.js"
   },
@@ -19,7 +19,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5"
   },
   "engines": {
     "node": "12.14.1"
