--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "mongoose": "^5.9.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "ts-node": "^8.10.2"
   },
   "engines": {
     "node": "12.14.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.11",
+    "@types/supertest": "^2.0.9",
     "jest": "^26.0.1",
     "node-mocks-http": "^1.8.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
   }
 }
