--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
+    "@types/mongoose": "^5.7.23",
     "@types/node": "^14.0.11",
     "@types/supertest": "^2.0.9",
     "jest": "^26.0.1",
