--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
+    "twitter-lite": "^0.14.0",
     "typescript": "^3.9.5"
   },
   "engines": {
